# convert_birthdays

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-app.yml
contacts_to_birthdays/: build.py  build.sh  contacts_birthdays.py  main.py  setup.py
