[tool.poetry]
name = "contacts-to-birthdays"
version = "0.1.0"
description = "simple way to convert contact list to birthdays"
authors = ["Alex Zasalvskis <sahsariga111@gmail.com>"]
license = "mit"
readme = "README.md"
packages = [{include = "contacts_to_birthdays"}]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
ics = "^0.7.2"
xlrd = "^2.0.1"
xlwt = "^1.3.0"
openpyxl = "^3.1.2"
pandas = "^2.1.1"



[tool.poetry.scripts]
convert = "contacts_to_birthdays.main:main"
version ="contacts_to_birthdays.build:version"
build_docs ="contacts_to_birthdays.build:build_docs"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
