[metadata]
name = contacts_to_birthdays
version = 1.0.0
author = Alex Zaslavskis
author_email = sahsariga111@email.com
description = A Python project to convert contacts to birthdays

[options]
packages = find:
install_requires =
    datetime
    pandas
    xlwt
    beautifulsoup4
    python-dateutil
    ics

[options.entry_points]
console_scripts =
    contacts_to_birthdays = contacts_to_birthdays.contacts_birthdays:main

[bdist_wheel]
universal = 1

[tool:pytest]
